Fix: Use fixed positioning for edit button to make it visible

--- a/style.css
+++ b/style.css
@@ -1031,10 +1031,11 @@ main {
 }
 
 .detail-controls {
-    position: absolute;
-    top: 30px;
+    position: fixed;
+    top: 80px;
     right: 30px;
     z-index: 100;
+    overflow: visible;
 }
 
 .edit-icon {
